<resources>
    <string name="app_name">Holiway</string>
    <string name="title_post">Post</string>
    <string name="title_map">Map</string>
    <string name="title_add">Add</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password not match the repeat password</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="register">Register</string>
    <string name="title">Title</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="age">Age</string>


</resources>